# slimllm

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
slimllm/: __init__.py  _http.py  _sse.py  exceptions.py  main.py  types.py
slimllm/providers/: __init__.py  _base.py  anthropic.py  openai.py
tests/: test_unit.py
