[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slimllm"
version = "0.1.0"
description = "Zero-dependency LiteLLM-compatible facade for OpenAI, Anthropic, and OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "openai", "anthropic", "openrouter", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/JulienGdnr/slimllm"
Repository = "https://github.com/JulienGdnr/slimllm"
Issues = "https://github.com/JulienGdnr/slimllm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["slimllm*"]
