[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slimllm"
version = "1.0.3"
description = "Zero-dependency LiteLLM-compatible facade for OpenAI, Anthropic, and OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "openai", "anthropic", "openrouter", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/JulienGdnrBot/slimllm"
Repository = "https://github.com/JulienGdnrBot/slimllm"
Issues = "https://github.com/JulienGdnrBot/slimllm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["slimllm*"]

# ---------------------------------------------------------------------------
# python-semantic-release
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
# Don't publish to PyPI directly — let the publish.yml workflow do it
# via OIDC trusted publishing (no token needed)
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "chore", "docs", "style", "test", "ci", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
